removal of relative package paths in favor of packagereferences, so as to make project independent of external filesystem structure

--- a/Newser.Api/Newser.Api.csproj
+++ b/Newser.Api/Newser.Api.csproj
@@ -16,9 +16,12 @@
     </ItemGroup>
 
     <ItemGroup>
+    <!--
       <Reference Include="CodeHollow.FeedReader">
         <HintPath>..\..\..\..\..\.nuget\packages\codehollow.feedreader\1.2.6\lib\netcoreapp2.1\CodeHollow.FeedReader.dll</HintPath>
       </Reference>
+      -->
+      <PackageReference Include="codehollow.feedreader" Version="1.2.6"/>
     </ItemGroup>
 
   
